--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "knex": "^0.21.1",
+    "papaparse": "^5.2.0",
     "pg": "^8.1.0"
   },
   "devDependencies": {
