--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "description": "A home inventory app with SQL Database ",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index",
+    "dev": "nodemon src/index",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "seed": "knex seed:run"
+    "seed": "knex seed:run",
+    "test": "jest"
   },
   "author": "Santiago Cardona",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "bcrypt": "^4.0.1",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "knex": "^0.21.1",
+    "nodemon": "^2.0.4",
     "papaparse": "^5.2.0",
-    "pg": "^8.1.0"
+    "pg": "^8.1.0",
+    "pino-http": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
@@ -23,6 +32,9 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^26.0.1",
+    "pino-pretty": "^4.0.0",
+    "supertest": "^4.0.2"
   }
 }
